--- a/styles.css
+++ b/styles.css
@@ -35,8 +35,29 @@ section {
   height: 100vh;
 }
 
+.homeSection {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.homeText {
+  width: 50%;
+}
+
+.homeImg {
+  width: 50%;
+}
+
 /* FOOTER */
 footer {
   display: flex;
   justify-content: center;
+}
+
+/* MEDIA */
+@media (max-width: 426px) {
+  .homeSection {
+    flex-direction: column;
+  }
 }
